Switch to postgres and add auth mechanism (#5)
